--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -61,7 +61,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.18
 _srcname=linux-stable-rc
-pkgver=4.18.7.198.gae285c20144a
+pkgver=4.18.8.0.gdfba61ec760e
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -74,8 +74,8 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.18"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
 _bfq_sq_mq_path="bfq-sq-mq"
-_bfq_sq_mq_ver='v8r12'
-_bfq_sq_mq_rel='2K180913'
+_bfq_sq_mq_ver='v9r1'
+_bfq_sq_mq_rel='2K180915'
 _bfq_sq_mq_patch="${_major}-bfq-sq-mq-${_bfq_sq_mq_ver}-${_bfq_sq_mq_rel}.patch"
 
 source=(# mainline kernel
@@ -100,7 +100,7 @@ source=(# mainline kernel
 
 sha256sums=('SKIP'
             '9f7177679c8d3f8d699ef0566a51349d828436dba04603bc2223f98c60d2d178'
-            '833506a1a59b9a6b0747e5e106053525dbed68d28cac6949409d8ecf9c74bd3c'
+            '6b67275090b2841f778fd7ea34899811eb74ac97c3190c6a7e5b32bc7bef7fae'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             '07e7558cb2ec0bbaf59a7e6775b8a1082fbf0abfd219a21d74f23d008b653f94'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
