--- a/Devel/Config/4.18/git/rt-bfq-git/config
+++ b/Devel/Config/4.18/git/rt-bfq-git/config
@@ -565,6 +565,7 @@ CONFIG_NR_CPUS_DEFAULT=64
 CONFIG_NR_CPUS=320
 CONFIG_SCHED_SMT=y
 CONFIG_SCHED_MC=y
+CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_RT_BASE=y
 CONFIG_HAVE_PREEMPT_LAZY=y
