--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -61,8 +61,8 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.18
 _srcname=linux
-pkgver=4.18.8.0.gdfba61ec760e
-pkgrel=2
+pkgver=4.18.9.0.g86e014f514f9
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
@@ -95,8 +95,7 @@ source=(# mainline kernel
         '99-linux.hook'
          # standard config files for mkinitcpio ramdisk
         'linux.preset'
-        '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch'
-        '0002-HID-core-fix-grouping-by-application.patch')
+        '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch')
 
 sha256sums=('SKIP'
             '9f7177679c8d3f8d699ef0566a51349d828436dba04603bc2223f98c60d2d178'
@@ -107,8 +106,7 @@ sha256sums=('SKIP'
             '75f99f5239e03238f88d1a834c50043ec32b1dc568f2cc291b07d04718483919'
             '5f6ba52aaa528c4fa4b1dc097e8930fad0470d7ac489afcb13313f289ca32184'
             'ad6344badc91ad0630caacde83f7f9b97276f80d26a20619a87952be65492c65'
-            '884324a4c6a1b2f16293c67d0ba2117945b05d993b328529588ee161748bce8f'
-            '13f69f9d20df75bf31233a3c85c6e257db78ebb046d385f8cb36291ce8bf4865')
+            '51f20885376e96d9354e07cc96b18470bf23905f9745af6079c5f0c2583340ef')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-bfq-mq-git} 
