--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -68,7 +68,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.18
 _srcname=linux-stable-rc
-pkgver=4.18.10.89.g85de3234c3f2
+pkgver=4.18.11.133.g74ba23ae47e5.ll24
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -253,7 +253,7 @@ prepare() {
 	[[ -z "$_makegconfig" ]] || make gconfig
 
     ### Save configuration for later reuse
-	msg2 "Save configuration for later reuse"
+	msg2 "Save configuration for later reuse..."
 	cat .config > "${startdir}/config.last"
 }
 
