--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -54,7 +54,7 @@ _muqss_disable=
 pkgbase=linux-lqx-git
 # pkgname=('linux-lqx-git' 'linux-lqx-git-headers' 'linux-lqx-git-docs')
 _major=4.18
-pkgver=4.18.5_4.r831.g8817df5
+pkgver=4.18.12_2.r874.geb28bda
 _srcname=linux-${_major}
 pkgrel=1
 _lqxpatchname=liquorix-package
@@ -93,7 +93,7 @@ prepare() {
         _minor="$(echo "$_abiname" | cut -f1 -d .)"
         _patchrel="$(echo "$_abiname" | cut -f2 -d .)"
         msg "Patching sources with ${_lqxpatchname}-${_major}.${_minor}-${_patchrel}.patch"
-        patch -Np1 -i ../${_lqxpatchname}/linux-liquorix/debian/patches/zen/${_major}.${_minor}-${_patchrel}.patch
+        patch -Np1 -i ../${_lqxpatchname}/linux-liquorix/debian/patches/zen/v${_major}.${_minor}-lqx${_patchrel}.patch
     
     ### Setting version
         msg2 "Setting version..."
