--- a/linux-lqx-rebranded/linux-lqx/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx/PKGBUILD
@@ -54,11 +54,11 @@ _muqss_disable=
 pkgbase=linux-lqx
 # pkgname=('linux-lqx' 'linux-lqx-headers' 'linux-lqx-docs')
 _major=4.18
-pkgver=4.18.12_1
+pkgver=4.18.12_2
 _srcname=linux-${_major}
 pkgrel=1
 _lqxpatchname=liquorix-package
-_lqxpatchrel=14
+_lqxpatchrel=15
 _lqxpatchver=${_lqxpatchname}-${_major}-${_lqxpatchrel}
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -93,7 +93,7 @@ prepare() {
         _minor="$(echo "$_abiname" | cut -f1 -d .)"
         _patchrel="$(echo "$_abiname" | cut -f2 -d .)"
         msg2 "Patching sources with ${_lqxpatchname}-${_major}.${_minor}-${_patchrel}.patch"
-        patch -Np1 -i ../${_lqxpatchver}/linux-liquorix/debian/patches/zen/${_major}.${_minor}-${_patchrel}.patch
+        patch -Np1 -i ../${_lqxpatchver}/linux-liquorix/debian/patches/zen/v${_major}.${_minor}-lqx${_patchrel}.patch
     
     ### Setting version
         msg2 "Setting version..."
@@ -380,7 +380,7 @@ done
 
 sha512sums=('950eb85ac743b291afe9f21cd174d823e25f11883ee62cecfbfff8fe8c5672aae707654b1b8f29a133b1f2e3529e63b9f7fba4c45d6dacccc8000b3a9a9ae038'
             'SKIP'
-            'b4fe9cc2c6f56137beddb4e1bcb587319032eb95a0f8c6aa74d3335249f6ec89b0e30447d3f5c3918c67e4b91a97aaaa2d54652bdda68e6438208ae70bb0ee64'
+            '7a64d087ba964b01a1da17ad0cecf2ddcb83208454dde4e06fc1aef4fe4f88175bdb34b20fb041815f1c8a1e25e077726afc78bd5277c3334c89060b8852f33b'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
