--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -61,7 +61,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.18
 _srcname=linux-stable-rc
-pkgver=4.18.16.0.g6b3252287aa2
+pkgver=4.18.16.r0.g6b3252287aa2
 pkgrel=3
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -114,7 +114,7 @@ _kernelname=${pkgbase#linux}
 pkgver() {
     cd "${_srcname}"
         
-        git describe --long --tags | sed 's/^v//;s/-/./g'
+        git describe --long --tags | sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g;s/\.rc/rc/'
 }
 
 prepare() {
