--- a/v4.19-trunk/usermode/linux-usermode-rc/PKGBUILD
+++ b/v4.19-trunk/usermode/linux-usermode-rc/PKGBUILD
@@ -5,14 +5,14 @@ pkgbase=linux-usermode-rc
 pkgname=('linux-usermode-rc' 'linux-usermode-rc-modules')
 _kernelname=-usermodelinux-rc
 _major=4.19
-#_minor=0
-#_minorc=$((_minor+1))
-#_rcver=rc1
-#pkgver=${_major}.${_minorc}
-pkgver=${_major}
+_minor=0
+_minorc=$((_minor+1))
+_rcver=rc1
+pkgver=${_major}.${_minorc}
 #_stable=${_major}.${_minor}
 _stable=${_major}
-#_stablerc=${pkgver}-${_rcver}
+_stablerc=${pkgver}-${_rcver}
+_srcname=linux-${_stable}
 _srcname=linux-${_stable}
 pkgrel=1
 pkgdesc="User mode Linux kernel and modules"
@@ -23,12 +23,14 @@ depends=('coreutils')
 makedepends=('bc' 'inetutils' 'gcc7')
 source=("https://www.kernel.org/pub/linux/kernel/v4.x/linux-${_stable}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/linux-${_stable}.tar.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.sign"
         'config'
         '70-uml.hook')
 
 sha256sums=('0c68f5655528aed4f99dae71a5b259edc93239fa899e2df79c055275c21749a1'
+            'SKIP'
+            'afc824f9206e4a5a9117b116a9b00efdafcabb8891b27916d52deedff80a9578'
             'SKIP'
             '8cfd24b83db59c0c9dfafd68bac44142ef780429a70df41af8643cb2f5ca1fc7'
             '452b8d4d71e1565ca91b1bebb280693549222ef51c47ba8964e411b2d461699c')
@@ -41,8 +43,8 @@ validpgpkeys=(
 prepare() {
   cd ${_srcname}
   
-  #msg2 "Add stable-review patch"
-  #patch -p1 -i ../patch-${_stablerc}
+  msg2 "Add stable-review patch"
+  patch -p1 -i ../patch-${_stablerc}
 
   msg2 "Fix naming schema in EXTRAVERSION"
   _rc="$(cat Makefile | grep -m1 -e EXTRAVERSION | grep -o "[[:digit:]]*")"
