--- a/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
@@ -55,8 +55,8 @@ _CFQ_disable=y
 ### Disable Kyber I/O scheduler
 _kyber_disable=y
 
-### Enable MQ scheduling 
-_mq_enable=y
+### Disable MQ scheduling 
+_mq_disable=
 
 ### Running with a 1000 HZ tick rate 
 _1k_HZ_ticks=y
@@ -66,9 +66,9 @@ _1k_HZ_ticks=y
 pkgbase=linux-juliagoda-git
 _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
-_major=4.18
+_major=4.19
 _srcname=linux
-pkgver=4.18.16.r0.g6b3252287aa2.ll31
+pkgver=4.19.1.r0.g07a03b97b9ce.ll2
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -80,15 +80,15 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'graphviz')
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
 _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
-_lucjanrev='ll31'
+_lucjanrev='ll2'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 ### linux-lucjan rc
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
 # _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
 # _lucjanname='lucjan'
-# _lucjanrev='ll22'
-# _lucjanrc='rc1'
+# _lucjanrev='ll1'
+# _lucjanrc='rc10'
 # _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y"
@@ -186,11 +186,11 @@ prepare() {
 		sed -i -e s'/^CONFIG_MQ_IOSCHED_KYBER=y/# CONFIG_MQ_IOSCHED_KYBER is not set/' ./.config
 	fi
 	
-    ### Enable MQ scheduling
-	if [ -n "$_mq_enable" ]; then
-		msg2 "Enable MQ scheduling..."
-		sed -i -e s'/^# CONFIG_SCSI_MQ_DEFAULT is not set/CONFIG_SCSI_MQ_DEFAULT=y/' \
-		    -i -e s'/^# CONFIG_DM_MQ_DEFAULT is not set/CONFIG_DM_MQ_DEFAULT=y/' ./.config
+    ### Disable MQ scheduling
+	if [ -n "$_mq_disable" ]; then
+		msg2 "Disabling MQ scheduling..."
+		sed -i -e s'/^CONFIG_SCSI_MQ_DEFAULT=y/# CONFIG_SCSI_MQ_DEFAULT is not set/' \
+		    -i -e s'/^CONFIG_DM_MQ_DEFAULT=y/# CONFIG_DM_MQ_DEFAULT is not set/' ./.config
         fi
         
     ### Optionally set tickrate to 1000 
@@ -440,9 +440,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '5a5fa1a20e9ad93ff3da641ed71d94ceaa94764b58af2f36e0635f4f0cfb031b259b686533f14ef3cb101dfae04cc812d4dc02f7cc05375e6f3811b47a20877a'
+            'eef758d20234033cec41bda191c3884d143dfa2c969f751fedec02214438fc3ae98235169653eeb8654b4e30e20b3fcf9ed6b5f3750674e99528b8c823275b45'
             'SKIP'
-            'f95713f1f4d155981afa588debb8025b0043e75016a4a23c9043ceb45bebe81502e032a22bc7faeea474f79a763a2a949454a02acd719c1dd15df3f0f06edeb8'
+            '51ad7e1a59af40c28de10b9ddc6c458acfd3daa1e68e061766114d370a9475c8b9929118627102b4d01c25ff8371d32f1cdc738ae3fb93a7b7046e43eda0712d'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
