--- a/linux-lucjan/trunk/linux-lucjan-git/PKGBUILD
+++ b/linux-lucjan/trunk/linux-lucjan-git/PKGBUILD
@@ -74,7 +74,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-lucjan-git-kernel' 'linux-lucjan-git-headers' 'linux-lucjan-git-docs')
 _major=4.20-rc1
 _srcname=linux-mainline
-pkgver=4.20rc1.r98.gb00d209241ff.ll1
+pkgver=4.20rc1.r122.g3541833fd1f2.ll1
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -102,7 +102,7 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'graphviz')
 _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/trunk"
 _lucjanname='lucjan'
 _lucjanrev='ll1'
-_lucjanrc='rc1'
+_lucjanrc='rc2'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
 source=("$_srcname::git+https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
@@ -134,7 +134,7 @@ prepare() {
     
     ### Setting version
         msg2 "Setting version..."
-        sed -e "/^EXTRAVERSION =/s/=.*/= .${_lucjanrev}/" -i Makefile
+        # sed -e "/^EXTRAVERSION =/s/=.*/= .${_lucjanrev}/" -i Makefile
         scripts/setlocalversion --save-scmversion
         echo "-$pkgrel" > localversion.10-pkgrel
         echo "$_kernelname" > localversion.20-pkgname
@@ -473,7 +473,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'c7d6f06cf7012d5115fb24bb2ed04d74243b0a16daef93fce8789588e983cdbf2b6018d2c8d8ac970f864da8f852b9dc5f5754eb9ace58d8440c22dda72da658'
+            '8f9eb8a650c993bc87d3f1b1e91989efcc83138b74ef9046c15281e094107f955c02c5289f77d2e550e69bd0aace2f11fa9d45331e3aa6997a1cf1087368063c'
             'SKIP'
             '0942970d2deefde59e20e9b5a11edb2d6237ddfcf7988b63e727a6bd13274a7d89c2d8f2ba9c1dc4cdac818de0198f221413d389e93ab86edce3382684362999'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
