--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -92,8 +92,7 @@ _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 # _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
-        "${_lucjanpath}/${_lucjanpatch}"
-        "${_lucjanpath}/${_lucjanpatch}.sig"
+        "${_lucjanpath}/${_lucjanpatch}"{,.sig}
          # the main kernel config files
         'config'
          # pacman hook for depmod
