--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -70,8 +70,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.19
 _srcname=linux-stable-rc
-pkgver=4.19.4.r0.g98a661ea85a8.ll6
-pkgrel=2
+pkgver=4.19.4.r119.gbe4bbf9fbca5.ll6
+pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -139,11 +139,6 @@ prepare() {
     ### Setting config
         msg2 "Setting config..."
         cp ../config .config
-        make olddefconfig
-
-    ### Prepared version
-        make -s kernelrelease > ../version
-        msg2 "Prepared %s version %s" "$pkgbase" "$(<../version)"
 
     ### Optionally use running kernel's config
 	# code originally by nous; http://aur.archlinux.org/packages.php?ID=40191
@@ -229,6 +224,15 @@ prepare() {
             make localmodconfig
             fi
         fi
+
+    ### Rewrite configuration
+        msg2 "Rewrite configuration"
+        make prepare
+        yes "" | make config >/dev/null
+
+    ### Prepared version
+        make -s kernelrelease > ../version
+        msg2 "Prepared %s version %s" "$pkgbase" "$(<../version)"
 
     ### Running make nconfig
 	
