--- a/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
@@ -57,10 +57,10 @@ _CFQ_disable=y
 ### Disable Kyber I/O scheduler
 _kyber_disable=y
 
-### Disable MQ scheduling 
+### Disable MQ scheduling
 _mq_disable=
 
-### Running with a 1000 HZ tick rate 
+### Running with a 1000 HZ tick rate
 _1k_HZ_ticks=y
 
 ### Do not edit below this line unless you know what you're doing
@@ -71,7 +71,7 @@ _pkgbase=linux-lucjan
 _major=4.19
 _srcname=linux
 pkgver=4.19.4.r0.g98a661ea85a8.ll6
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -139,11 +139,6 @@ prepare() {
     ### Setting config
         msg2 "Setting config..."
         cp ../config .config
-        make olddefconfig
-
-    ### Prepared version
-        make -s kernelrelease > ../version
-        msg2 "Prepared %s version %s" "$pkgbase" "$(<../version)"
 
     ### Optionally use running kernel's config
 	# code originally by nous; http://aur.archlinux.org/packages.php?ID=40191
@@ -229,6 +224,15 @@ prepare() {
             make localmodconfig
             fi
         fi
+
+    ### Rewrite configuration
+        msg2 "Rewrite configuration"
+        make prepare
+        yes "" | make config >/dev/null
+
+    ### Prepared version
+        make -s kernelrelease > ../version
+        msg2 "Prepared %s version %s" "$pkgbase" "$(<../version)"
 
     ### Running make nconfig
 	
