--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -64,6 +64,7 @@ _mq_disable=
 _1k_HZ_ticks=y
 
 ### Download linux-lucjan patchset
+# ATTENTION - one of two predefined values should be selected!
 # 'actual' - stable releases (recommended)
 # 'testing' - rc releases (active only temporarily)
 _linux_lucjan=actual
@@ -75,7 +76,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.19
 _srcname=linux-stable-rc
-pkgver=4.19.5.r0.gb32d16ec9956.ll6
+pkgver=4.19.5.r111.gac4af649901b.ll6
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
