--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -66,7 +66,7 @@ _1k_HZ_ticks=y
 # ATTENTION - one of two predefined values should be selected!
 # 'actual' - stable releases (recommended)
 # 'testing' - rc releases (active only temporarily)
-_linux_lucjan=actual
+_linux_lucjan=testing
 
 ### Do not edit below this line unless you know what you're doing
 
@@ -75,7 +75,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.19
 _srcname=linux-stable-rc
-pkgver=4.19.7.r0.g61c68f2a2af0.ll11
+pkgver=4.19.7.r42.g62b84b3cf313.ll12
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -455,7 +455,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'f44430f3bcb8384992bc86466f4216faaaf42d7afd0befc5ae923ba03ac058cf1ba8a841b8637127b4b6a2d46183edf98e94ecde1ada25da0ccbe8704722fe18'
+            'b8ef1095f6df0be15d326eda9e9808278e395a3606c8f356877b62bf46dc8f059dc08afa71c4c4be9a08bdf4be25a154ca872a709da6d979556c768a4b5dad89'
             'SKIP'
             '04871e4a18ba2ddb6a05ded6d76daba5b43a1b937d58835a147770d0a356070c1ce0681a538351bfe55d48ac35078b91662063f47f4c6eab5a81c085f35927d9'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
