--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -62,7 +62,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.19
 _srcname=linux
-pkgver=4.19.10.r0.gb23de3254f8c
+pkgver=4.19.11.r0.g2a5f80c5bd72
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -103,7 +103,7 @@ sha256sums=('SKIP'
             '8761152216a204b0bbf2bd581abc3f5cdf851cec8b807316528b72a7b552ef12'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             '1bc55e0c12f1ea9bf4b823fc78b91e12cf1cf1972f778484fbd5fa0d9e8264f2'
-            '431c8b4ebc34d86c815d6af071d728a02872db9f5f6cc5e6542b0431264532ff'
+            '7670e90fbde0fdb519104d73c407b260eb983e63cd5d6b8ba301164f669a7e99'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
             'c043f3033bb781e2688794a59f6d1f7ed49ef9b13eb77ff9a425df33a244a636'
             'ed9d35cb7d7bd829ff6253353efa5e2d119820fe4f4310aea536671f5e4caa37'
