--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -74,7 +74,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.20
 _srcname=linux-stable-rc
-pkgver=4.20.4.r0.g3d4332cd8258.ll19
+pkgver=4.20.4.r127.gc3515872cb7f.ll19
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -130,6 +130,7 @@ prepare() {
     ### Setting version
         msg2 "Setting version..."
         sed -e "/^EXTRAVERSION =/s/=.*/=/" -i Makefile
+        touch .scmversion
         scripts/setlocalversion --save-scmversion
         echo "-$pkgrel" > localversion.10-pkgrel
         echo "$_kernelname" > localversion.20-pkgname
