Revert FS#59688 - Install HTML docs
Signed-off-by: Piotr Gorski <lucjan.lucjanov@gmail.com>

--- a/aur-rebased/linux-bfq-mq-lucjan-git/PKGBUILD
+++ b/aur-rebased/linux-bfq-mq-lucjan-git/PKGBUILD
@@ -61,11 +61,11 @@ _mq_enable=
 pkgbase=linux-bfq-mq-lucjan-git
 _srcname=bfq-mq-lucjan
 pkgver=4.20.0.g3a16c93255ea
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="http://www.kernel.org/"
 license=('GPL2')
-makedepends=('kmod' 'inetutils' 'bc' 'git' 'libelf' 'python-sphinx' 'graphviz')
+makedepends=('kmod' 'inetutils' 'bc' 'git' 'libelf')
 options=('!strip')
 _bfqpath="https://gitlab.com/tom81094/custom-patches/raw/master/bfq-mq"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.17"
@@ -243,7 +243,7 @@ prepare() {
 build() {
   cd ${_srcname}
 
-  make bzImage modules htmldocs
+  make bzImage modules
 }
 
 _package() {
@@ -403,18 +403,6 @@ _package-docs() {
   msg2 "Installing documentation..."
   mkdir -p "$builddir"
   cp -t "$builddir" -a Documentation
-
-  msg2 "Removing doctrees..."
-  rm -r "$builddir/Documentation/output/.doctrees"
-
-  msg2 "Moving HTML docs..."
-  local src dst
-  while read -rd '' src; do
-    dst="$builddir/Documentation/${src#$builddir/Documentation/output/}"
-    mkdir -p "${dst%/*}"
-    mv "$src" "$dst"
-    rmdir -p --ignore-fail-on-non-empty "${src%/*}"
-  done < <(find "$builddir/Documentation/output" -type f -print0)
 
   msg2 "Adding symlink..."
   mkdir -p "$pkgdir/usr/share/doc"
