--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -59,17 +59,13 @@ _major=5.0
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.0.3_1.r1024.g79fda74
+pkgver=5.0.7_1.r1036.ge796b62
 pkgrel=1
 arch=('x86_64')
 url="http://liquorix.net/"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git')
-
-if [ -n "$_htmldocs_enable" ]; then
-    makedepends+=('python-sphinx' 'graphviz')
-fi
 
 source=("https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
         "https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.sign"
@@ -201,12 +197,7 @@ prepare() {
 build() {
   cd ${_srcname}
 
-  local params=(bzImage modules)
-  if [ -n "$_htmldocs_enable" ]; then
-    params+=(htmldocs)
-  fi
-
-  make ${params[*]}
+  make bzImage modules
 }
 
 _package() {
@@ -362,20 +353,6 @@ _package-docs() {
   msg2 "Installing documentation..."
   mkdir -p "$builddir"
   cp -t "$builddir" -a Documentation
-
-  if [ -n "$_htmldocs_enable" ]; then
-    msg2 "Removing doctrees..."
-    rm -r "$builddir/Documentation/output/.doctrees"
-
-    msg2 "Moving HTML docs..."
-    local src dst
-    while read -rd '' src; do
-        dst="$builddir/Documentation/${src#$builddir/Documentation/output/}"
-        mkdir -p "${dst%/*}"
-        mv "$src" "$dst"
-        rmdir -p --ignore-fail-on-non-empty "${src%/*}"
-    done < <(find "$builddir/Documentation/output" -type f -print0)
-  fi
 
   msg2 "Adding symlink..."
   mkdir -p "$pkgdir/usr/share/doc"
