Resync 5.0-lucjan-ll32-rc2
Signed-off-by: Piotr Gorski <lucjan.lucjanov@gmail.com>

--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -68,7 +68,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=5.0
 _srcname=linux-stable-rc
-pkgver=5.0.10.r72.g49e23c831c03.ll32
+pkgver=5.0.10.r90.g852cce372723.ll32
 pkgrel=4
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
