--- a/aur-rebased/linux-bfq-mq-lucjan-git/PKGBUILD
+++ b/aur-rebased/linux-bfq-mq-lucjan-git/PKGBUILD
@@ -60,16 +60,17 @@ _mq_enable=
 
 pkgbase=linux-bfq-mq-lucjan-git
 _srcname=bfq-mq-lucjan
-pkgver=4.20.0.g3a16c93255ea
-pkgrel=2
+_major=4.20
+pkgver=4.20.0.g9e414e4ee55d
+pkgrel=1
 arch=('x86_64')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('kmod' 'inetutils' 'bc' 'git' 'libelf')
 options=('!strip')
 _bfqpath="https://gitlab.com/tom81094/custom-patches/raw/master/bfq-mq"
-_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.17"
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/4.17"
+_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
+#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _bfqgroup="https://groups.google.com/group/bfq-iosched/attach"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
