--- a/linux-5.1/uksm/stable-rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.1/uksm/stable-rc/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.1
 _srcname=linux-stable-rc
-pkgver=5.1.3.r129.gcce3bc9ebd2f
+pkgver=5.1.3.r126.ga8112defa801
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
