--- a/linux-5.1/uksm/stable/linux-uksm-git/PKGBUILD
+++ b/linux-5.1/uksm/stable/linux-uksm-git/PKGBUILD
@@ -268,7 +268,7 @@ _package() {
 
 _package-headers() {
     pkgdesc="Header files and scripts for building modules for ${pkgbase/linux/Linux} kernel"
-    depends=('linux-uksm')
+    depends=('linux-uksm-git')
 
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
@@ -351,7 +351,7 @@ _package-headers() {
 
 _package-docs() {
     pkgdesc="Kernel hackers manual - HTML documentation that comes with the ${pkgbase/linux/Linux} kernel"
-    depends=('linux-uksm')
+    depends=('linux-uksm-git')
 
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
