--- a/linux-rt-bfq-5.0/linux-rt-bfq-git/PKGBUILD
+++ b/linux-rt-bfq-5.0/linux-rt-bfq-git/PKGBUILD
@@ -52,10 +52,10 @@ pkgbase=linux-rt-bfq-git
 # pkgname=('linux-rt-bfq-git' 'linux-rt-bfq-git-headers' 'linux-rt-bfq-git-docs')
 _major=5.0
 _srcname=linux-rt-devel
-pkgver=5.0.19.rt11.r0.g629a5e9c7365
-pkgrel=2
+pkgver=5.0.21.rt12.r0.g0d0e62016e97
+pkgrel=1
 arch=('x86_64')
-url="https://github.com/Algodev-github/bfq-mq/"
+url="https://mirrors.edge.kernel.org/pub/linux/kernel/projects/rt/"
 license=('GPL2')
 options=('!strip')
 makedepends=('git' 'kmod' 'inetutils' 'bc' 'libelf')
