--- a/linux-rt-bfq-5.0/linux-rt-bfq/PKGBUILD
+++ b/linux-rt-bfq-5.0/linux-rt-bfq/PKGBUILD
@@ -59,7 +59,7 @@ _pkgver=${_major}.${_minor}
 _srcname=linux-${_pkgver}
 pkgrel=1
 arch=('x86_64')
-url="https://github.com/Algodev-github/bfq-mq/"
+url="https://mirrors.edge.kernel.org/pub/linux/kernel/projects/rt/"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf')
