--- a/linux-rt-bfq-5.0/linux-rt-bfq/config
+++ b/linux-rt-bfq-5.0/linux-rt-bfq/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.0.7 Kernel Configuration
+# Linux/x86 5.0.21 Kernel Configuration
 #
 
 #
@@ -170,6 +170,7 @@ CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
+CONFIG_USER_NS_UNPRIVILEGED=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
