--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-lqx-tag
 # pkgname=('linux-lqx-tag' 'linux-lqx-tag-headers' 'linux-lxq-tag-docs')
 _major=5.2
 _srcname=linux-${_major}
-pkgver=5.2.4lqx2
+pkgver=5.2.4.lqx2
 _pkgver=5.2.4-lqx2
 pkgrel=1
 arch=('x86_64')
