--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
-_minor=13
-_lqx=lqx2
+_minor=14
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.2.13.lqx2.r0.ge6179da8dc88
+pkgver=5.2.14.lqx1.r0.gd7ffacb2786a
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
