--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,11 +48,11 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
-_minor=18
+_minor=19
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.2.18.lqx1.r0.g272016fc85dc
-pkgrel=2
+pkgver=5.2.19.lqx1.r0.gfce474a28523
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
